--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -31,10 +31,6 @@ header {
         flex-wrap: wrap;
         padding: 6px 1rem 6px 1rem;
 
-        img {
-            width: 75%;
-        }
-
         svg {
             width: 50px;
         }
@@ -99,6 +95,12 @@ main {
     .request {
         display: none;
     }
+
+    .nav-container {
+        img {
+            width: 80px;
+        }
+    }
 }
 
 @media (min-width: 1000px) {
@@ -107,6 +109,10 @@ main {
 
         .nav-container {
             flex-wrap: unset;
+
+            img {
+                width: 149px;
+            }
 
             button {
                 display: none;
