Added mobile nav styles

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -38,7 +38,7 @@ import "../styles/styles.scss";
     <nav>
       <ul>
         <li><a href="/products">Our Products</a></li>
-        <li><a href="/services">Services</a></li>
+        <li><a href="/services">Online Services</a></li>
         <li><a href="/contact-us">Contact Us</a></li>
         <li><a href="/about">About Us</a></li>
       </ul>
