--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -12,6 +12,12 @@ footer {
         flex-direction: column;
         gap: 1rem;
 
+        .footer-contact {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
         .footer-quote-button {
             background-color: $white;
             padding: 1rem;
@@ -43,25 +49,32 @@ footer {
         .footer-line {
             border-bottom: 3px solid $white;
         }
-    
+
         .footer-list {
             display: flex;
             justify-content: space-between;
-    
+
             ul {
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
-    
+
                 li {
                     padding: 1rem 0 1rem 0;
                 }
             }
-    
+
         }
 
-        p {
-            color: $white;
+    }
+
+    p {
+        color: $white;
+    }
+    
+    @media (min-width: 1000px) {
+        .footer-container {
+            flex-direction: row;
         }
     }
 }
