footer desktop responsive

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -7,14 +7,12 @@ footer {
     list-style-type: none;
 
     li {
-        margin-top: 32px;
+      margin-top: 32px;
     }
-
   }
 }
 
-
-.footer-container {
+.footer-nav-container {
   display: flex;
   gap: 16px;
 }
@@ -41,34 +39,28 @@ footer {
 
 .footer-phone-container svg,
 .footer-email-container svg {
-    width: 1.5rem;
-    color: white;
-    margin-right: 13px;
+  width: 1.5rem;
+  color: white;
+  margin-right: 13px;
 }
 
 .footer-phone-container,
 .footer-email-container {
-    display: flex;
-}
-
-.footer-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
 }
 
 .footer-phone {
-    margin: 32px 0px;
+  margin: 32px 0px;
 }
 
 .footer-copyright {
-    padding-top: 45px;
+  padding-top: 45px;
 }
 
 .footer-line {
-  display: block;         
-  width: 270px;           
-  height: 3px;             
+  display: block;
+  width: 270px;
+  height: 3px;
   background-color: $white;
   margin-top: 25.5px;
 }
@@ -79,5 +71,33 @@ footer p {
   font-weight: bold;
   color: $white;
   font-family: "Assistant", sans-serif;
+}
+
+@media (min-width: 1000px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+  }
+  .footer-line {
+    display: inline-block;
+    width: 2px;
+    height: 280px;
+    background-color: $white;
+    margin: 0;
+  }
+
+  .footer-nav-container {
+    gap: 50px;
+  }
+
+}
+
+@media (min-width: 1400px) {
+
+  .footer-nav-container {
+    gap: 150px;
+  }
+
 }
 
