fixed spacing issues in footer desktop

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -5,7 +5,7 @@
 
 <footer>
   <div class="footer-container">
-    <div>
+    <div class="footer-logo-details">
       <a href="/"><img src="/assets/updated-printed-logo.png" alt="Logo image for Print|ED." /></a>
       <div class="footer-phone-container">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor">
