Fixed header styles and added hover animations and states

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -10,7 +10,7 @@ import "../styles/styles.scss";
   </div>
   <div class="nav-container">
     <a href="/"
-      ><img src="/assets/printed-logo.svg" alt="Logo image for Print|ED." /></a
+      ><img src="/assets/printed-logo-nav.png" alt="Logo image for Print|ED." /></a
     >
     <button class="toggle-nav">
       <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
