--- a/src/styles/_colours.scss
+++ b/src/styles/_colours.scss
@@ -1,10 +1,7 @@
 //Colour palette
 $primary-blue: #0F72DA;
 $secondary-yellow: #F7CE41;
-$tertiary-magenta: #E94E77;
-$button-blue: #124D80;
-$button-magenta: #D43B64;
-$bg-yellow: #FBE69E;
+$tertiary-dark-blue: #124D80;
 $white: #FFFFFF;
 $black: #000;
 $grey: #939393;
