--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,6 +3,7 @@
 footer {
   background-color: $primary-blue;
   padding: 32px 16px 16px 16px;
+
   ul {
     list-style-type: none;
 
@@ -28,13 +29,17 @@ footer {
   font-size: 20px;
   text-decoration: none;
   text-transform: uppercase;
-  color: $button-blue;
+  color: $tertiary-dark-blue;
   background-color: $secondary-yellow;
   padding: 1rem;
   border-radius: 6px;
   margin-top: 32px;
   width: 270px;
   text-align: center;
+  transition: background-color 0.3s ease-in-out; 
+  &:hover {
+    background-color: #FFEDAD;
+  }
 }
 
 .footer-phone-container svg,
@@ -81,6 +86,7 @@ footer p {
     justify-content: space-evenly;
     margin-top: 30px;
   }
+
   .footer-line {
     display: inline-block;
     width: 2px;
