--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,4 +1,5 @@
 @use "colours" as *;
+@use "mixins" as *;
 
 footer {
   background-color: $primary-blue;
@@ -24,22 +25,10 @@ footer {
 }
 
 .footer-request {
+  @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
   display: inline-block;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: $tertiary-dark-blue;
-  background-color: $secondary-yellow;
-  padding: 1rem;
-  border-radius: 6px;
   margin-top: 32px;
   width: 270px;
-  text-align: center;
-  transition: background-color 0.3s ease-in-out; 
-  &:hover {
-    background-color: #FFEDAD;
-  }
 }
 
 .footer-phone-container svg,
