--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -59,7 +59,7 @@ header {
                     display: block;
                     font-size: 20px;
                     font-weight: 600;
-                    color: $black;
+                    color: $tertiary-dark-blue;
                     height: 100%;
                     width: 100%;
                 }
