--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,11 @@ const pageData = homePage?.HomePage || [];
 
 // fetch homehero components
 const heroData = pageData.find(pd => pd.__component === "homehero.home-hero") || {};
-const {heroHeader, heroText, heroBtn} = heroData;
+const {heroHeader, heroText, 
+	ourProductsHeader, ourProductsText, ourProductsBtn,
+	onlineServicesHeader, onlineServicesText, onlineServicesBtn,
+	promoProductsHeader, promoProductsText, promoProductsBtn
+	} = heroData;
 
 const { heroBanner: {
 	url: heroBanner
@@ -42,7 +46,7 @@ const { heroBanner: {
 
 // fetch highquality components
 const highQualityData = pageData.find(pd => pd.__component === "highquality.high-quality") || {};
-const {highQualityHeader, highQualityText} = highQualityData;
+const {highQualityHeader, highQualityText, highQualityBtn} = highQualityData;
 
 const { highQualityImage: {
 	url: highQualityImage
@@ -90,64 +94,7 @@ const { integratedFormImage: {
 }} = featuredProductsData;
 
 
-// fetch uniqueproducts components
-const uniqueProductsData = pageData.find(pd => pd.__component === "uniqueproducts.unique-products") || {};
-const {uniqueProductsHeader, uniqueProductsText, uniqueProductsBtn} = uniqueProductsData;
 
-const { uniqueProductsImage: {
-	url: uniqueProductsImage
-}} = uniqueProductsData;
-
-const { uniqueProductsImage: {
-	alternativeText: uniqueProductsAltText
-}} = uniqueProductsData;
-
-
-// fetch promoproducts components
-const promoProductsData = pageData.find(pd => pd.__component === "promoproducts.promo-products") || {};
-const {promoProductsHeader, promoproductsText, promoProductsBtn} = promoProductsData;
-
-const { promoProductsImage: {
-	url: promoProductsImage
-}} = promoProductsData;
-
-const { promoProductsImage: {
-	alternativeText: promoProductsAltText
-}} = promoProductsData;
-
-
-//fetch featuredservices components
-const featuredservicesData = pageData.find(pd => pd.__component === "featuredservices.featured-services") || {};
-const { 
-	featuredServicesHeader, 
-    clientBrandedTitle, 
-    warehouseTitle,
-    instantProofingTitle
-} = featuredservicesData;
-
-const { clientBrandedImage: {
-	url: clientBrandedImage
-}} = featuredservicesData;
-
-const { warehouseImage: {
-	url: warehouseImage
-}} = featuredservicesData;
-
-const { instantProofingImage: {
-	url: instantProofingImage
-}} = featuredservicesData;
-
-const { clientBrandedImage: {
-	alternativeText: clientBrandedAltText
-}} = featuredservicesData;
-
-const { warehouseImage: {
-	alternativeText: warehouseAltText
-}} = featuredservicesData;
-
-const { instantProofingImage: {
-	alternativeText: instantProofingAltText
-}} = featuredservicesData;
 
 //fetch onlinebased components
 const onlineBasedData = pageData.find(pd => pd.__component === "onlinebased.online-based") || {};
@@ -164,7 +111,7 @@ const { onlineBasedImage: {
 
 //fetch about components
 const aboutData = pageData.find(pd => pd.__component === "about.about") || {};
-const {aboutHeader, aboutText, aboutBtn} = aboutData;
+const {aboutHeader, aboutText, requestQuoteBtn, contactUsBtn} = aboutData;
 
 const { aboutImage: {
 	url: aboutImage
@@ -175,17 +122,17 @@ const { aboutImage: {
 }} = aboutData;
 
 
-// fetch  product gallery component
-const productGalleryData = pageData.find(pd => pd.__component === "productgallery.product-gallery");
-const { productGalleryHeader, productGalleryImages } = productGalleryData;
 
 ---
 
 <Layout>
 
-	<Hero {heroHeader} {heroText} {heroBanner} {heroBtn} {heroAltText} />
+	<Hero {heroHeader} {heroText} {heroBanner} {heroAltText}
+	{ourProductsHeader} {ourProductsText} {ourProductsBtn}
+	{onlineServicesHeader} {onlineServicesText} {onlineServicesBtn}
+	{promoProductsHeader} {promoProductsText} {promoProductsBtn} />
 
-	<HighQuality {highQualityHeader} {highQualityImage} {highQualityText} {highQualityAltText}/>
+	<HighQuality {highQualityHeader} {highQualityImage} {highQualityText} {highQualityAltText} {highQualityBtn} />
 
 	<FeaturedProducts 
 	{featuredProductsHeader} 
@@ -194,18 +141,8 @@ const { productGalleryHeader, productGalleryImages } = productGalleryData;
 	{integratedFormText} {integratedFormImage} {integratedFormBtn}
 	{pressureSealAltText} {linerlessLabelAltText} {integratedFormAltText}/>
 
-	<UniqueProducts {uniqueProductsHeader} {uniqueProductsText} {uniqueProductsImage} {uniqueProductsBtn} {uniqueProductsAltText} />
-
-	<PromoProducts {promoProductsHeader} {promoProductsImage} {promoproductsText} {promoProductsBtn} {promoProductsAltText}/>
-
-	<FeaturedServices {featuredServicesHeader} {clientBrandedTitle} {clientBrandedImage} 
-	{warehouseTitle} {warehouseImage} {instantProofingTitle} {instantProofingImage}
-	{clientBrandedAltText} {warehouseAltText} {instantProofingAltText}/>
-
 	<OnlineBased {onlineBasedHeader} {onlineBasedImage} {onlineBasedText} {onlineBasedBtn} {onlineBasedAltText} />
 
-	<ProductGallery {productGalleryHeader} {productGalleryImages} />
-
-	<About {aboutHeader} {aboutImage} {aboutText} {aboutBtn} {aboutAltText}/>
+	<About {aboutHeader} {aboutImage} {aboutText} {requestQuoteBtn} {aboutAltText} {contactUsBtn} />
 
 </Layout>
