--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -95,7 +95,15 @@ const {
     daytodayText,
     regularText,
     availableoptionsText,
-    regularwindowText
+    regularwindowText,
+    laserCutAbout,
+    snapsetAbout,
+    continuousAbout,
+    customEnvelopeAbout,
+    laserCutChooseFrom,
+    snapsetChooseFrom,
+    continuousChooseFrom,
+    customEnvelopeChooseFrom
 } = moreProductsData;
 
 const { lasercutImage: {
@@ -160,7 +168,9 @@ const { featuredpromoImage: {
     {customsizesText} {snapsetTitle}  {durableTitle} {multipartText} {snapsetpartsText} {commonuseText} {fieldserviceText} {continuousTitle} 
     {reliableTitle} {continuousText} {continuouspartsText} {idealforText} {accountingText} {customenvelopeTitle} {deliverbrandfirstTitle} {daytodayText} 
     {regularText} {availableoptionsText} {regularwindowText} 
-    {lasercutAltText} {snapsetAltText} {continuousAltText} {customenvelopeAltText}/>
+    {lasercutAltText} {snapsetAltText} {continuousAltText} {customenvelopeAltText}
+    {laserCutAbout}  {snapsetAbout} {continuousAbout} {customEnvelopeAbout}
+    {laserCutChooseFrom} {snapsetChooseFrom} {continuousChooseFrom} {customEnvelopeChooseFrom}/>
 
     <PromoProducts {featuredpromoTitle} {featuredpromoText} {featuredpromoBtn} {featuredpromoImage} {featuredpromoAltText}/>
 
