--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,8 +5,14 @@ footer {
   background-color: $primary-blue;
   padding: 32px 16px 16px 16px;
 
+  .footer-navigation {
+    display: flex;
+    justify-content: space-between;
+  }
+
   ul {
     list-style-type: none;
+    max-width: 147px;
 
     li {
       margin-top: 32px;
@@ -14,21 +20,23 @@ footer {
   }
 }
 
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer-nav-container {
   display: flex;
   gap: 16px;
-}
-
-// Prevent wrapping (keep text on one line)
-.footer-nav li a {
-  white-space: nowrap;
 }
 
 .footer-request {
   @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
   display: inline-block;
   margin-top: 32px;
-  width: 270px;
+  width: 100%;
 }
 
 .footer-phone-container svg,
@@ -53,8 +61,8 @@ footer {
 
 .footer-line {
   display: block;
-  width: 270px;
-  height: 3px;
+  width: 300px;
+  height: 2px;
   background-color: $white;
   margin-top: 25.5px;
 }
@@ -71,7 +79,8 @@ footer p {
 @media (min-width: 1000px) {
 
   .footer-container {
-    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: space-evenly;
     margin-top: 30px;
   }
