Added footer navigation hover states

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -37,5 +37,5 @@ import "../styles/styles.scss";
       </div>
     </div>
   </div>
-    <p class="footer-copyright">Copyright © PrintED 2025</p>
+    <p class="footer-copyright">Copyright © Print|ED 2025</p>
 </footer>
