--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -65,7 +65,7 @@ footer {
 
 .footer-line {
   display: block;
-  width: 300px;
+  width: 100%;
   height: 2px;
   background-color: $white;
   margin-top: 25.5px;
