--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -15,4 +15,7 @@ const { title, description } = Astro.props;
     href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Hepta+Slab:wght@1..900&display=swap"
     rel="stylesheet"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@1..900&display=swap" rel="stylesheet">
 </head>
