--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,40 +1,58 @@
 
-// Font Families
-$font-headers: 'Hepta Slab', serif;
-$font-body: 'Assistant', sans-serif;
+h1{
+    font-family: 'hepta slab', serif;
+    font-weight: bold;
+    font-size: 29px;
+}
+h2{
+    font-family: 'hepta slab', serif;
+    font-weight: bold;
+    font-size: 24px;
+}
+h3{
+    font-family: 'hepta slab', serif;
+    font-weight: 500;
+    font-size: 22px;
+}
+h4{
+    font-family: 'hepta slab', serif;
+    font-weight: 500;
+    font-size: 20px;
+}
 
-//Header Mobile Font Sizes
-$h1-mobile: 29px; //bold
-$h2-mobile: 24px; //bold
-$h3-mobile: 22px; //medium
-$h4-mobile: 20px; //medium
+p{
+    font-family: 'assistant', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+}
 
-//Header Desktop Font Sizes
-$h1-desktop: 56px; //bold
-$h2-desktop: 48px; //bold
-$h3-desktop: 32px; //medium
-$h4-desktop: 20px; //medium
+a{
+    font-family: 'assistant', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    font-style: uppercase;
+    text-decoration: none;
+}
 
-// Body Sizes
-$contact-banner-mobile: 15px; //bold
-$contact-banner-desktop: 20px; //bold
 
-$header-nav-mobile: 20px; // uppercase semi-bold
-$header-nav-desktop: 24px; // uppercase semi-bold
+@media (min-width: 768px) {
+    h1{
+        font-size: 56px;
+    }
+    h2{
+        font-size: 48px;
+    }
+    h3{
+        font-size: 32px;
+    }
+    h4{
+        font-size: 20px;
+    }
+    a{
+        font-size: 20px;
+    }
+}
 
-$p-text-size: 20px;
-
-$button-text-mobile: 16px; // uppercase bold
-$button-text-desktop: 20px; //uppercase bold
-
-$footer-nav-mobile: 20px; //bold
-$footer-nav-desktop: 24px; //bold
-
-// Font weights
-$regular: 400;
-$medium: 500;
-$semi-bold: 600;
-$bold: 700;
 
 
 // Forms error message styling
