--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -12,7 +12,7 @@ const {
 } = Astro.props;
 ---
 
-<div>
+<div class="form-card">
     <!-- Add https://formsubmit.co/email-here later in the action -->
     <form
         action="#"
@@ -104,7 +104,7 @@ const {
 Examples include sizes, materials, colours, specifications, questions, and details from file uploads."></textarea>
             <p id="message_errormsg"></p>
         </div>
-        <input type="submit" value={requestquoteBtn} />
+        <input type="submit" value={requestquoteBtn} class="submit-btn" />
     </form>
 </div>
 
