--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -1,8 +1,10 @@
 /* Styles for both contact us and request a qoute page here */
 @use "colours" as *;
+@use "mixins" as *;
 
 .contact-info-card{
     padding-top: 1rem;
+    color: $tertiary-dark-blue;
 }
 .form-h1{
     background-color: $secondary-yellow ;
@@ -21,4 +23,50 @@
     width: 60px;
     height: 63px;
     margin-bottom: 0.5rem;
+}
+.contact-row{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+.contact-card{
+    background-color: $white;
+    border-radius: 15px;
+
+}
+
+.form-card{
+    background-color: $tertiary-dark-blue;
+    font-family: 'assistant', sans-serif;
+    color: $white;
+    margin-bottom: 96px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+
+    input{
+        width: 100%;
+        height: 55px;
+        margin-bottom: 1rem;
+
+    
+    }
+}
+
+
+label{
+    
+    font-weight: bold;
+}
+.message-box{
+    height: 256px;
+    width: 100%;
+   
+}
+.submit-btn {
+  @include btn ($white, $tertiary-dark-blue, #FFEDAD);
+  display: inline-block;
+  margin-top: 32px;
+  width: 100%;
 }
