Added container class to nav and body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ import "../styles/styles.scss";
     <body>
         <Nav />
         <main>
-            <div>
+            <div class="container">
                 <slot />
             </div>
         </main>
