--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,32 +1,34 @@
-
-h1{
+h1 {
     font-family: 'hepta slab', serif;
     font-weight: bold;
     font-size: 29px;
 }
-h2{
+
+h2 {
     font-family: 'hepta slab', serif;
     font-weight: bold;
     font-size: 24px;
 }
-h3{
+
+h3 {
     font-family: 'hepta slab', serif;
     font-weight: 500;
     font-size: 22px;
 }
-h4{
+
+h4 {
     font-family: 'hepta slab', serif;
     font-weight: 500;
     font-size: 20px;
 }
 
-p{
+p {
     font-family: 'assistant', sans-serif;
     font-weight: 400;
     font-size: 20px;
 }
 
-a{
+a {
     font-family: 'assistant', sans-serif;
     font-weight: 600;
     font-size: 16px;
@@ -35,20 +37,24 @@ a{
 }
 
 
-@media (min-width: 768px) {
-    h1{
+@media (min-width: 1000px) {
+    h1 {
         font-size: 56px;
     }
-    h2{
+
+    h2 {
         font-size: 48px;
     }
-    h3{
+
+    h3 {
         font-size: 32px;
     }
-    h4{
+
+    h4 {
         font-size: 20px;
     }
-    a{
+
+    a {
         font-size: 20px;
     }
 }
@@ -61,9 +67,7 @@ a{
 #email_errormsg,
 #subject_errormsg,
 #message_errormsg,
-#quantity_errormsg
- {
+#quantity_errormsg {
     color: red;
     display: none;
 }
-
